--- a/src/components/DarkMode/header.module.css
+++ b/src/components/DarkMode/header.module.css
@@ -1,10 +1,12 @@
 .container{
+    
     width: 35px;
     height: 20px;
     background-color: white;
     border-radius: 30px;
     cursor: pointer;
     position: relative;
+    z-index: 55px;
     
 }
 .around{
@@ -15,4 +17,5 @@
     border-radius: 50%;
     left: 2px;
     top: 2px;
+    transition: ease 0.5s;
 }
