--- a/src/components/DarkMode/header.module.css
+++ b/src/components/DarkMode/header.module.css
@@ -2,7 +2,7 @@
     
     width: 35px;
     height: 20px;
-    background-color: white;
+    background-color: rgb(0, 24, 88);
     border-radius: 30px;
     cursor: pointer;
     position: relative;
@@ -13,9 +13,9 @@
     position: absolute;
     width: 15px;
     height: 15px;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     border-radius: 50%;
     left: 2px;
-    top: 2px;
+    top: 3px;
     transition: ease 0.5s;
 }
