--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,15 +35,17 @@ body {
   background-color: rgb(255, 0, 0);
   max-width: 30%;
   border-radius: 40px;
-  box-shadow: 10px 15px 15px 10px #00000041;
+  box-shadow: 10px 7px 15px 10px #00000041;
   margin: 0 auto;
   margin-top: 100px;
 }
 .theme.dark.App{
-  background-color: #bdbdbdd7;
+  background-color: #2e2e2e;
 }
 .theme.light.App{
-  background-color: #212121;
+  background-color: #bdbdbd;
+  box-shadow: 10px 7px 15px 10px #8f8f8f88;
+  
 }
 .theme.body_xo{
   padding-bottom: 10%;
